# msgspec-ext-preview

./: .gitignore  README.md  pyproject.toml
src/msgspec_ext/: __init__.py
src/msgspec_ext/types/: file.py  network.py  payments.py  secret.py
src/msgspec_ext_preview/: __init__.py  settings.py
src/msgspec_ext_preview/types/: extra.py  phone.py
tests/: test1.py
