[project]
name = "msgspec-ext"
version = "0.1.0"
description = "Extra data validation and Settings management using msgspec"
readme = "README.md"
authors = [
    { name = "Vilson Rodrigues", email = "vilsonrodrigues07@hotmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "msgspec>=0.19.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
